5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1582_1331.log
== TEST (2019-03-29 11:02:11) 
-- CODE:
print(15)
print(5)
-- OUTPUT:
15
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:02:13) 
-- CODE:
print(15)
print(5)
-- EXECUTION TIME:
0.127085
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:04:11) 
-- CODE:
print(50%3)
print(5)
-- OUTPUT:
2
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:04:17) 
-- CODE:
print(50%3)
print(5)
-- EXECUTION TIME:
0.126211
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:04:46) 
-- CODE:
print(50//3)
print(50-(50//3))
-- OUTPUT:
16
34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:04:50) 
-- CODE:
print(50//3)
print(50-(50//3))
-- EXECUTION TIME:
0.194082
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:05:01) 
-- CODE:
print(50//3)
print(50-(50//3))
-- OUTPUT:
16
34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:05:30) 
-- CODE:
print(50//3)
print(50%3))
-- ERROR:
File "XXXX", line 2
    print(50%3))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:05:38) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:05:41) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.142074
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
